feat: refactor inflation and quote services to improve readability and maintainability